@@ -4,6 +4,10 @@ Changelog
 1.0b23 - Unreleased
 -------------------
 
+* Use the faster C implementation of elementtree if it is available. Also
+  prefer xml.etree over the external package.
+  [hannosch]
+
 * Grant restricted code access to the search results, e.g. skin scripts.
   [do3cc, witsch]
 
